--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "ecommerce",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
+    "start": "node dist/ecommerce/server/server.mjs",
+    "dev": "ng serve --host 0.0.0.0",
     "build": "ng build",
-    "watch": "ng build --watch --configuration development",
-    "serve:ssr:ecommerce": "node dist/ecommerce/server/server.mjs"
+    "git": "git add . && git commit -m refactor",
+    "push": "git push origin master"
   },
   "private": true,
   "dependencies": {
@@ -14,12 +14,15 @@
     "@angular/common": "^19.0.0",
     "@angular/compiler": "^19.0.0",
     "@angular/core": "^19.0.0",
+    "@angular/fire": "^18.0.1",
     "@angular/forms": "^19.0.0",
     "@angular/platform-browser": "^19.0.0",
     "@angular/platform-browser-dynamic": "^19.0.0",
     "@angular/platform-server": "^19.0.0",
     "@angular/router": "^19.0.0",
     "@angular/ssr": "^19.0.0",
+    "@ngxs/logger-plugin": "^18.1.6",
+    "@ngxs/store": "^18.1.6",
     "express": "^4.18.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -31,6 +34,10 @@
     "@angular/compiler-cli": "^19.0.0",
     "@types/express": "^4.17.17",
     "@types/node": "^18.18.0",
+    "autoprefixer": "^10.4.20",
+    "daisyui": "^4.12.14",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.15",
     "typescript": "~5.6.2"
   }
 }
